--- a/App1/App1/App1.csproj
+++ b/App1/App1/App1.csproj
@@ -104,6 +104,12 @@
   <ItemGroup>
     <AndroidResource Include="Resources\mipmap-hdpi\mapaEspanhaPortugal.jpg" />
   </ItemGroup>
+  <ItemGroup>
+    <AndroidAsset Include="Assets\Cidades.txt" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidAsset Include="Assets\GrafoTremEspanhaPortugal.txt" />
+  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it.
     Other similar extension points exist, see Microsoft.Common.targets.
